added are.na link

--- a/views/about/biz.handlebars
+++ b/views/about/biz.handlebars
@@ -32,6 +32,8 @@
     <div><em>CONTACT:</em></div>
       <div class="email">sam.heckle(at)nyu.edu</div>
       <h3><a href="https://www.instagram.com/samanthiik/">instagram</a></h3>
+
+      <h3><a href="https://www.are.na/sam-heckle/channels">are.na</a></h3>
       <h3><a href="https://bsky.app/profile/smarmy.bsky.social">bsky</a></h3>
       <h3><a href="https://discord.com/users/smarmy#3287">discord</a></h3>
 
